@@ -1,5 +1,6 @@
 Version 3.0.0
 =============
+  Enhance vgcfgrestore to check for active LVs in restored VG.
   Configure supports --disable-silent-rules for verbose builds.
   Fix unmonitoring of merging snapshots.
   Cache can uses metadata format 2 with cleaner policy.
